[gd_scene load_steps=5 format=3 uid="uid://60m8jb7srlpk"]

[ext_resource type="Script" path="res://scripts/server_button.gd" id="1_p4rab"]
[ext_resource type="Script" path="res://scripts/client_button.gd" id="2_62yn7"]
[ext_resource type="PackedScene" uid="uid://nc7kybcnbhmp" path="res://main.tscn" id="2_g15tn"]
[ext_resource type="Script" path="res://scripts/client_connection_dialog.gd" id="4_n8xor"]

[node name="Lobby" type="Node2D"]

[node name="ServerButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 341.0
offset_top = 330.0
offset_right = 445.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
text = "Open The Server"
script = ExtResource("1_p4rab")
target_scene = ExtResource("2_g15tn")
metadata/_edit_use_anchors_ = true

[node name="ClientButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 715.0
offset_top = 330.0
offset_right = 857.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
text = "Connect as Client"
script = ExtResource("2_62yn7")
metadata/_edit_use_anchors_ = true

[node name="ClientConnectionDialog" type="AcceptDialog" parent="."]
title = "Connection Settings"
initial_position = 1
size = Vector2i(560, 210)
ok_button_text = "Connect"
dialog_hide_on_ok = false
script = ExtResource("4_n8xor")
target_scene = ExtResource("2_g15tn")

[node name="Container" type="VBoxContainer" parent="ClientConnectionDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 552.0
offset_bottom = 161.0

[node name="AddressLabel" type="Label" parent="ClientConnectionDialog/Container"]
layout_mode = 2
text = "Address"

[node name="AddressLineEdit" type="LineEdit" parent="ClientConnectionDialog/Container"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "192.168.0.108"

[node name="PortLabel" type="Label" parent="ClientConnectionDialog/Container"]
layout_mode = 2
text = "Port"

[node name="PortLineEdit" type="LineEdit" parent="ClientConnectionDialog/Container"]
layout_mode = 2
text = "50001"
placeholder_text = "12345"

[connection signal="pressed" from="ServerButton" to="ServerButton" method="_on_pressed"]
[connection signal="pressed" from="ClientButton" to="ClientButton" method="_on_pressed"]
[connection signal="confirmed" from="ClientConnectionDialog" to="ClientConnectionDialog" method="_on_confirmed"]
